# ticket-load-test

./: .gitignore  BRAIN-STORMING.md  README.md  RESOURCE-ALLOCATION.md  STORMING.md  TEST-PLAN.md  build-and-deploy-latest.zsh  docker-compose.yml  load-test-batch.py  otel-collector-config.yaml  prometheus.yaml  reset-cluster.zsh  run-batch-test.zsh  run-load-test.sh  set-cart-profile.zsh  start-cluster.zsh  tempo.yaml
cart/: main.py  pyproject.toml
cart/api/: cart_router.py
cart/models/: cart.py
cart/services/: cart_service.py
cart/utils/: telemetry.py
k8s/ingress/: cart-ingress.yaml
k8s/observability/: cadvisor-daemonset.yaml  grafana-combined-dashboard-configmap.yaml  grafana-configmap.yaml  grafana-dashboard-provider-configmap.yaml  grafana-deployment.yaml  grafana-postgres-dashboard-configmap.yaml  grafana-service.yaml  otel-collector-configmap.yaml  otel-collector-deployment.yaml  otel-collector-service.yaml  postgres-exporter-deployment.yaml  postgres-exporter-queries-configmap.yaml  postgres-exporter-service.yaml  prometheus-configmap.yaml  prometheus-deployment.yaml  tempo-service.yaml  (+4 more)
load-test/: load_test.py  pyproject.toml
ticket-info/: Dockerfile  main.py  pyproject.toml
ticket-manager/: .env.example  Dockerfile  main.py  pyproject.toml
ticket-manager/api/: ticket_router.py
ticket-manager/data/: db.py  query_ticket.py  redis_client.py
ticket-manager/models/: ticket.py
ticket-manager/services/: reservation_consumer.py
ticket-manager/utils/: telemetry.py  ticket_gen.py
user-generator/: Dockerfile  README.md  main.py  pyproject.toml
(+39 files in other folders)
